# RNN_test

./: pyproject.toml
model_simple/: SimpleLSTM.py  train.py
single_prog/: LSTM.py  LSTM_batch.py  VRAE.py
