[tool.poetry]
name = "pytorch-rnn-test"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
